# test-task-back-end

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
products/: admin.py  models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_selectedproduct.py
profiles/: serializers.py  urls.py  views.py
testtask/: asgi.py  settings.py  urls.py  wsgi.py
